--- a/index.html
+++ b/index.html
@@ -277,46 +277,46 @@
             "net": 75.34
         }
     },
-    "93990": {
-        "name": "AHMET KERİ M KIRIT",
-        "ranking": 20,
-        "lgs_score": 344.272,
+    "71964": {
+        "name": "GİZEM KALE",
+        "ranking": 4,
+        "lgs_score": 464.509,
         "subjects": {
             "TÜRKÇE": {
-                "doğru": 14,
-                "yanlış": 6,
-                "net": 12.0
+                "doğru": 19,
+                "yanlış": 0,
+                "net": 19.0
             },
             "SOSYAL": {
-                "doğru": 8,
-                "yanlış": 2,
-                "net": 7.33
+                "doğru": 5,
+                "yanlış": 1,
+                "net": 4.67
             },
             "DİN KÜLTÜRÜ": {
-                "doğru": 7,
-                "yanlış": 3,
-                "net": 6.0
+                "doğru": 9,
+                "yanlış": 0,
+                "net": 9.0
             },
             "İNGİLİZCE": {
-                "doğru": 8,
-                "yanlış": 2,
-                "net": 7.33
+                "doğru": 6,
+                "yanlış": 1,
+                "net": 5.67
             },
             "MATEMATİK": {
-                "doğru": 9,
-                "yanlış": 6,
-                "net": 7.0
+                "doğru": 19,
+                "yanlış": 0,
+                "net": 19.0
             },
             "FEN BİLİMLERİ": {
-                "doğru": 11,
-                "yanlış": 9,
-                "net": 8.0
+                "doğru": 18,
+                "yanlış": 1,
+                "net": 17.67
             }
         },
         "totals": {
-            "doğru": 57,
-            "yanlış": 28,
-            "net": 47.66
+            "doğru": 76,
+            "yanlış": 3,
+            "net": 75.01
         }
     },
     "92106": {
@@ -947,6 +947,48 @@
             "doğru": 63,
             "yanlış": 22,
             "net": 55.67
+        }
+    },
+    "93990": {
+        "name": "AHMET KERİ M KIRIT",
+        "ranking": 20,
+        "lgs_score": 344.272,
+        "subjects": {
+            "TÜRKÇE": {
+                "doğru": 14,
+                "yanlış": 6,
+                "net": 12.0
+            },
+            "SOSYAL": {
+                "doğru": 8,
+                "yanlış": 2,
+                "net": 7.33
+            },
+            "DİN KÜLTÜRÜ": {
+                "doğru": 7,
+                "yanlış": 3,
+                "net": 6.0
+            },
+            "İNGİLİZCE": {
+                "doğru": 8,
+                "yanlış": 2,
+                "net": 7.33
+            },
+            "MATEMATİK": {
+                "doğru": 9,
+                "yanlış": 6,
+                "net": 7.0
+            },
+            "FEN BİLİMLERİ": {
+                "doğru": 11,
+                "yanlış": 9,
+                "net": 8.0
+            }
+        },
+        "totals": {
+            "doğru": 57,
+            "yanlış": 28,
+            "net": 47.66
         }
     },
     "84064": {
